# vuktorch

./: .gitignore  01_the_scalar.md  02_autograd.md  03_tensors.md  04_tensor_ops.md  05_modules_neurons.md  06_layers_mlps.md  07_losses.md  08_optimization.md  09_training_loops.md  10_mnist.md  COURSE_GUIDE.md  README.md  pyproject.toml
Day_01/: 01_the_scalar.ipynb  01_the_scalar.md  01_the_scalar_template.ipynb  HOMEWORK.ipynb  HOMEWORK.md  README.md
Day_01/examples/: manual_backprop.py
Day_01/vuktorch/: engine.py
Day_02/: 02_autograd_template.ipynb  README.md
Day_02/examples/: autograd_demo.py
Day_02/vuktorch/: engine.py
Day_03/: 03_tensors_template.ipynb  README.md
Day_03/vuktorch/: tensor.py
Day_04/: 04_tensor_ops_template.ipynb  README.md
Day_05/: 05_modules_neurons_template.ipynb  README.md
Day_05/vuktorch/: __init__.py  nn.py
Day_06/: 06_layers_mlp_template.ipynb  README.md
Day_06/vuktorch/: __init__.py
Day_07/: 07_losses_template.ipynb  README.md
Day_07/vuktorch/: __init__.py  losses.py  nn.py  tensor.py
Day_08/: 08_sgd_template.ipynb  README.md
Day_08/vuktorch/: __init__.py
Day_09/: 09_training_template.ipynb  README.md
Day_09/examples/: train_xor.py
Day_09/vuktorch/: __init__.py  losses.py  optim.py  train.py
Day_10/: 10_mnist_template.ipynb  README.md
examples/: mlp_moons.py  scalar_demo.py
plans/: video-and-skool-plan.md
portfolio/: README-template.md  interview-questions.md  project-extensions.md  resume-bullets.md
tests/: test_nn.py  test_tensor.py
vuktorch/: __init__.py  losses.py  nn.py  optim.py  tensor.py
(+4 files in other folders)
